--- a/src/App.css
+++ b/src/App.css
@@ -82,15 +82,44 @@ input {
 
 html,
 body {
+  overflow-x: hidden;
+  position: relative;
+  z-index: 0;
   height: 100%;
   box-sizing: border-box;
-  background-color: #222222;
+  background-color: #ecb8e6;
 }
 
-.nav li {
-  width:5%;
-  border-radius: 5px;
-  border:2px solid white;
-  background-color:rgba(200,200,200,.3);
-  color:white;
+#root:before {
+  content: "";
+  width: 100%;
+  height: 100%;
+  background: #baa1db;
+  position: absolute;
+  top: 0;
+  transform: rotate(40deg);
+  transform-origin: right;
+  z-index: -1;
+}
+
+.nav {
+  display: flex;
+  justify-content: center;
+  margin: 30px 0 40px;
+}
+
+.nav li a {
+  box-sizing: border-box;
+  flex: 1;
+  padding: 10px 20px;
+  margin: 10px;
+  text-align: center;
+  border-radius: 10px;
+  background-color: rgba(236, 213, 255, 0.63);
+  color: white;
+}
+.nav li a:hover {
+  transition: linear 0.3s;
+  background-color: rgba(255, 255, 255, 0.6);
+  color: #ac8bd6;
 }
