--- a/src/App.css
+++ b/src/App.css
@@ -123,3 +123,10 @@ body {
   background-color: rgba(255, 255, 255, 0.6);
   color: #ac8bd6;
 }
+
+.loading {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
