--- a/src/App.css
+++ b/src/App.css
@@ -128,5 +128,9 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
+  color: white;
+  font-size: 3rem;
+  font-weight: 800;
+  text-shadow: 1px 3px 4px rgba(236, 213, 255, 0.8);
   transform: translate(-50%, -50%);
 }
